# scan_n_plan_workshop

./: dependencies.repos
snp_motion_planning/: CMakeLists.txt
snp_motion_planning/config/: toolpath.yaml
snp_motion_planning/include/snp_motion_planning/: ndt_planning_server.hpp  planning_server.hpp
snp_motion_planning/launch/: planning_server.launch.xml
snp_motion_planning/snp_motion_planning/: motion_client.py  velocity_plot.py
snp_motion_planning/src/: client.py  motion_client.py  ndt_planning_server.cpp  planner_profiles.hpp  planning_server.cpp  trajopt_custom_composite_profile.cpp  trajopt_ifopt_custom_composite_profile.h  velocity_plot.py
snp_motion_planning/src/plugins/kinematics/: motoman_hc10_ikfast_plugin.cpp
snp_motion_planning/src/plugins/tasks/: constant_tcp_speed_time_parameterization_profile.cpp  constant_tcp_speed_time_parameterization_task.cpp  kinematic_limits_check_profile.cpp  kinematic_limits_check_task.cpp  task_composer_plugin_factory.cpp  tcp_speed_limiter_profile.cpp  tcp_speed_limiter_task.cpp
